feat: added MessageService and TelegramService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ jwt.expiration=3600000
 
 telegram.bot.username=berkut_test_assignment_bot
 telegram.bot.token=7951350204:AAHO6IWJIf9aFuo91F6j1CnQVPMpajyLW4U
-
+logging.level.org.telegram=DEBUG
 
 
